src/assets/main.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100..900&family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
@import 'tailwindcss';

body {
  font-family: 'Noto Sans HK', 'Noto Sans', sans-serif;
}

.v {
  font-size: var(--text-xs);
  color: var(--color-gray-300);
  padding-right: var(--spacing);
}

